--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,57 @@
     padding: 0;
 }
 
-.suhu-style{
+body {
+    font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+}
+
+header h1 {
+    text-align: center;
+    margin: 20px 0;
+}
+
+section h1 {
+    margin-bottom: 20px;
+}
+
+main {
+    padding: 20px;
+}
+
+main section {
+    padding: 20px;
+}
+
+#instruction {
+    margin-bottom: 20px;
+}
+
+#instruction-cara {
+    margin-bottom: 20px;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 15px;
+}
+
+textarea {
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    padding: 10px;
+    resize: none;
+}
+
+button {
+    margin: 5px;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+}
+
+.suhu-style {
     font-size: 20px;
     font-family: math;
     font-style: italic;
@@ -14,8 +64,19 @@ footer {
     color: white;
     text-align: center;
     padding: 25px;
-
-    position: fixed;
+    position: relative;
+    margin: 0;
     bottom: 0;
-    width: 100%;
+}
+
+
+/* Media Query untuk Responsif */
+@media (max-width: 768px) {
+    main section {
+        padding: 10px;
+    }
+
+    button {
+        padding: 8px 12px;
+    }
 }
